exercises/calico/egress3/calico/egress-2500-deny-opt-in.yaml
---
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: egress-deny-opt-in
spec:
  order: 2500 # if it is 1000 or less, knp can't override this "default" rule
  namespaceSelector: allow-egress in {'disabled'}
  egress:
    - action: Deny
